--- a/config/test/mappings.yml
+++ b/config/test/mappings.yml
@@ -1,4 +1,4 @@
 general:
-  perl: [ ['script/myperl_file',  "test_bin"],
-          ['modules/mymodule.pm', "test_lib"] ]
+  perl: [ ['scripts/template.pl',  "test_bin"],
+          ['modules/Template.pm', "test_lib"] ]
   java: [ ["code.jar", "test_java"] ]
