--- a/config/production/global.yml
+++ b/config/production/global.yml
@@ -1,7 +1,7 @@
 general:
   repository:
-    url: 'svn+ssh://svn.internal.sanger.ac.uk/repos/svn/pathsoft/general/trunk'
-    branch: 'trunk'
+    url: 'git+ssh://git.internal.sanger.ac.uk/repos/git/pathogens/general.git'
+    branch: 'master'
   directories_to_build: ['perl','java','python']
 
 checkout_directory: "/tmp"
