--- a/config/production/mappings.yml
+++ b/config/production/mappings.yml
@@ -1,4 +1,61 @@
 general:
-  perl: [ ['cgi/map_request.pl',        "production_bin"],
-          ['modules/GoogleDocument.pm', "production_lib"] ]
+  perl: [
+          ['scripts/abacas.pl',                     'production_bin'],
+          ['scripts/annotations_update.pl',         'production_bin'],
+          ['scripts/backup_documents.pl',           'production_bin'],
+          ['scripts/big_blast.pl',                  'production_bin'],
+          ['scripts/bigger_blast.pl',               'production_bin'],
+          ['scripts/blast2tab.pl',                  'production_bin'],
+          ['scripts/blast_formatter.pl',            'production_bin'],
+          ['scripts/check_aux_files.pl',            'production_bin'],
+          ['scripts/check_lustre.pl',               'production_bin'],
+          ['scripts/contigs2fas.pl',                'production_bin'],
+          ['scripts/dgpi_chado',                    'production_bin'],
+          ['scripts/embl_to_ps.pl',                 'production_bin'],
+          ['scripts/fasta_chunker.pl',              'production_bin'],
+          ['scripts/fasta_extractor.pl',            'production_bin'],
+          ['scripts/fetch_references.pl',           'production_bin'],
+          ['scripts/flexi_blast.pl',                'production_bin'],
+          ['scripts/generate_config_files.pl',      'production_bin'],
+          ['scripts/list_used_references.pl',       'production_bin'],
+          ['scripts/omcl2genedb.pl',                'production_bin'],
+          ['scripts/orthomcl_chado',                'production_bin'],
+          ['scripts/pathfind',                      'production_bin'],
+          ['scripts/pfamscan2tab.pl',               'production_bin'],
+          ['scripts/plexfind',                      'production_bin'],
+          ['scripts/populate_assembly_sizes.pl',    'production_bin'],
+          ['scripts/populate_organisms.pl',         'production_bin'],
+          ['scripts/psu_splitter.pl',               'production_bin'],
+          ['scripts/psu_union.pl',                  'production_bin'],
+          ['scripts/reads_analysis.pl',             'production_bin'],
+          ['scripts/rfam_scan.pl',                  'production_bin'],
+          ['scripts/rfamscan2tab.pl',               'production_bin'],
+          ['scripts/rfamscan_chado',                'production_bin'],
+          ['scripts/rt_report',                     'production_bin'],
+          ['scripts/scaffolder',                    'production_bin'],
+          ['scripts/sequence_search.pl',            'production_bin'],
+          ['scripts/sequenceformat.converter.pl',   'production_bin'],
+          ['scripts/set_orgprops.pl',               'production_bin'],
+          ['scripts/signalp2embl.pl',               'production_bin'],
+          ['scripts/split_fa.pl',                   'production_bin'],
+          ['scripts/tmhmm2embl.pl',                 'production_bin'],
+          ['scripts/update_fasta_file_names.pl',    'production_bin'],
+          ['scripts/update_lustre_ref_genomes.pl',  'production_bin'],
+          ['scripts/update_pathtrack.pl',           'production_bin'],
+          ['scripts/update_pathtrack_irods.pl',     'production_bin'],
+          ['scripts/validate_embl.pl',              'production_bin'],
+          ['modules/GoogleDocument.pm',             'production_lib'],  
+          ['modules/GoogleDocumentHelper.pm',       'production_lib'],
+          ['cgi/tracking-errors.pl',                'production_cgi'],
+          ['cgi/species.pl',                        'production_cgi'],
+          ['cgi/report.pl',                         'production_cgi'],
+          ['cgi/reg-study.pl',                      'production_cgi'],
+          ['cgi/qc_grind.pl',                       'production_cgi'],
+          ['cgi/pending_view.pl',                   'production_cgi'],
+          ['cgi/overview.pl',                       'production_cgi'],
+          ['cgi/map-view.pl',                       'production_cgi'],
+          ['cgi/map-request.pl',                    'production_cgi'],
+          ['cgi/QCGrindWeb.pm',                     'production_cgi'],
+          ['cgi/PIWebUtils.pm',                     'production_cgi']
+        ]
   java: [ ["googlecode.jar", "production_java"] ]
