update settings and files to map

--- a/config/production/global.yml
+++ b/config/production/global.yml
@@ -2,24 +2,25 @@ general:
   repository:
     url: 'git+ssh://git.internal.sanger.ac.uk/repos/git/pathogens/general.git'
     branch: 'master'
-  directories_to_build: ['perl','java','python']
+  directories_to_build: ['perl','java','python','shell']
 
 checkout_directory: "/tmp"
 
 directories:
   production_bin:    '/software/pathogen/internal/prod/bin'
   production_lib:    '/software/pathogen/internal/prod/lib'
-  production_cgi:    ''
+  pathdev_lib:       '/software/pathogen/internal/pathdev/lib'
+  pathdev_bin:       '/software/pathogen/internal/pathdev/bin'  
   preproduction_bin: '/software/pathogen/internal/preprod/bin'
   preproduction_lib: '/software/pathogen/internal/preprod/lib'
   production_java:   '/software/pathogen/internal/pathdev/java'
   documentation:     '/nfs/WWWdev/INTWEB_docs/htdocs/Teams/Team81/docs'
 
 application_locations:
-  perl:           '/usr/bin/perl'
-  natural_docs:   '/usr/bin/NaturalDocs'
-  source_control: '/usr/bin/svn'
+  perl:           '/software/bin/perl'
+  natural_docs:   '/software/pathogen/external/apps/usr/local/NaturalDocs-1.52/NaturalDocs'
+  source_control: '/usr/bin/git'
   make:           '/usr/bin/make'
 deployment:
   server: 'lenny-dev64'
-  user:   'pathinfo'
+  user:   'pathdb'
