--- a/config/test/global.yml
+++ b/config/test/global.yml
@@ -23,5 +23,4 @@ application_locations:
   make:           '/usr/bin/make'
   
 deployment:
-  server: 'seq1b'
-  user:   ''
+  server: 'pathinfo-test'
