directory size report

--- a/config/production/mappings.yml
+++ b/config/production/mappings.yml
@@ -81,5 +81,6 @@ general:
             ['scripts/dnaplotter',                         'production_bin'],
             ['scripts/art',                                'production_bin'],
             ['scripts/act',                                'production_bin'],
-            ['scripts/disk_usage_report.sh',               'pathdev_bin'   ]
+            ['scripts/disk_usage_report.sh',               'pathdev_bin'   ],
+            ['scripts/directory_size_report.sh',           'pathdev_bin'   ]
         ]
