--- a/config/production/mappings.yml
+++ b/config/production/mappings.yml
@@ -83,5 +83,6 @@ general:
             ['scripts/art',                                'production_bin'],
             ['scripts/act',                                'production_bin'],
             ['scripts/disk_usage_report.sh',               'pathdev_bin'   ],
-            ['scripts/directory_size_report.sh',           'pathdev_bin'   ]
+            ['scripts/directory_size_report.sh',           'pathdev_bin'   ],
+            ['scripts/generate_ref_index.sh',		   'pathdev_bin'   ]
         ]
