--- a/config/production/mappings.yml
+++ b/config/production/mappings.yml
@@ -32,6 +32,7 @@ general:
             ['scripts/check_aux_files.pl',            'pathdev_bin'   ],    
             ['scripts/pathfind',                      'production_bin'],
             ['scripts/plexfind',                      'production_bin'],
+            ['scripts/accessionfind',                 'production_bin'],
             ['scripts/bigger_blast.pl',               'production_bin'],
             ['scripts/flexi_blast.pl',                'production_bin'],
             ['scripts/fasta_chunker.pl',              'production_bin'],
