add number of lanes at each stage of pipelien

--- a/config/production/mappings.yml
+++ b/config/production/mappings.yml
@@ -28,7 +28,8 @@ general:
             ['scripts/scaffolder',                    'pathdev_bin'   ],
             ['scripts/set_orgprops.pl',               'pathdev_bin'   ],
             ['scripts/update_pathtrack.pl',           'pathdev_bin'   ],       
-            ['scripts/check_aux_files.pl',            'pathdev_bin'   ],    
+            ['scripts/check_aux_files.pl',            'pathdev_bin'   ],  
+            ['scripts/num_lanes_in_pipelines',        'pathdev_bin'   ],
             ['scripts/pathfind',                      'production_bin'],
             ['scripts/plexfind',                      'production_bin'],
             ['scripts/mapfind',                       'production_bin'],
