--- a/config/production/mappings.yml
+++ b/config/production/mappings.yml
@@ -31,6 +31,7 @@ general:
             ['scripts/check_aux_files.pl',            'pathdev_bin'   ],  
             ['scripts/num_lanes_in_pipelines',        'pathdev_bin'   ],
             ['scripts/forecast_sequencing_data.pl',   'pathdev_bin'   ],
+            ['scripts/reffind',                       'production_bin'],
             ['scripts/pathfind',                      'production_bin'],
             ['scripts/plexfind',                      'production_bin'],
             ['scripts/mapfind',                       'production_bin'],
