--- a/config/production/mappings.yml
+++ b/config/production/mappings.yml
@@ -63,7 +63,8 @@ general:
             ['modules/GoogleDocument.pm',             'production_lib'],  
             ['modules/GoogleDocumentHelper.pm',       'production_lib'],
             ['scripts/contigs2fas.pl',                'production_bin'],
-            ['scripts/validate_embl.pl',              'production_bin']
+            ['scripts/validate_embl.pl',              'production_bin'],
+            ['scripts/map2bam.pl',                    'production_bin']
         ]
   java: [ ["googlecode.jar", "production_java"] ]
   
