--- a/config/production/global.yml
+++ b/config/production/global.yml
@@ -2,7 +2,7 @@ general:
   repository:
     url: 'git+ssh://git.internal.sanger.ac.uk/repos/git/pathogens/general.git'
     branch: 'master'
-  directories_to_build: ['perl','java','python','shell']
+  directories_to_build: ['perl','java','python','shell', 'c']
 
 checkout_directory: "/tmp"
 
