Added ena_submissions_update.pl to pathdev_bin

--- a/config/test/mappings.yml
+++ b/config/test/mappings.yml
@@ -34,6 +34,7 @@ general:
             ['scripts/set_orgprops.pl',               'pathdev_bin'   ],
             ['scripts/update_pathtrack.pl',           'pathdev_bin'   ],       
             ['scripts/check_aux_files.pl',            'pathdev_bin'   ],    
+            ['scripts/ena_submissions_update.pl',     'pathdev_bin'   ],
             ['scripts/pathfind',                      'production_bin'],
             ['scripts/plexfind',                      'production_bin'],
             ['scripts/bigger_blast.pl',               'production_bin'],
