--- a/config/production/mappings.yml
+++ b/config/production/mappings.yml
@@ -39,6 +39,7 @@ general:
             ['scripts/pathfind',                      'production_bin'],
             ['scripts/plexfind',                      'production_bin'],
             ['scripts/mapfind',                       'production_bin'],
+            ['scripts/snpfind',                       'production_bin'],
             ['scripts/accessionfind',                 'production_bin'],
             ['scripts/bigger_blast.pl',               'production_bin'],
             ['scripts/flexi_blast.pl',                'production_bin'],
