--- a/config/production/mappings.yml
+++ b/config/production/mappings.yml
@@ -35,6 +35,7 @@ general:
             ['scripts/forecast_sequencing_data.pl',   'pathdev_bin'   ],
             ['scripts/ena_submissions_update.pl',     'pathdev_bin'   ],
             ['scripts/generate_project_pages.pl',     'pathdev_bin'   ],
+            ['scripts/retry_failed_lanes.pl',         'pathdev_bin'   ],
             ['scripts/reffind',                       'production_bin'],
             ['scripts/pathfind',                      'production_bin'],
             ['scripts/plexfind',                      'production_bin'],
@@ -70,6 +71,7 @@ general:
             ['scripts/contigs2fas.pl',                'production_bin'],
             ['scripts/validate_embl.pl',              'production_bin'],
             ['scripts/shuffle_reads',                 'production_bin'],
+            ['scripts/assemble_lanes',                'production_bin'],
             ['scripts/map2bam.pl',                    'production_bin']
         ]
   java: [ ["googlecode.jar", "production_java"] ]
