--- a/config/production/mappings.yml
+++ b/config/production/mappings.yml
@@ -36,6 +36,7 @@ general:
             ['scripts/ena_submissions_update.pl',     'pathdev_bin'   ],
             ['scripts/generate_project_pages.pl',     'pathdev_bin'   ],
             ['scripts/retry_failed_lanes.pl',         'pathdev_bin'   ],
+            ['scripts/update_species_table.pl',       'pathdev_bin'   ],
             ['scripts/reffind',                       'production_bin'],
             ['scripts/pathfind',                      'production_bin'],
             ['scripts/plexfind',                      'production_bin'],
