--- a/config/test/mappings.yml
+++ b/config/test/mappings.yml
@@ -36,6 +36,7 @@ general:
             ['scripts/check_aux_files.pl',            'pathdev_bin'   ],    
             ['scripts/ena_submissions_update.pl',     'pathdev_bin'   ],
             ['scripts/generate_project_pages.pl',     'pathdev_bin'   ],
+            ['scripts/update_species_table.pl',       'pathdev_bin'   ],
             ['scripts/pathfind',                      'production_bin'],
             ['scripts/plexfind',                      'production_bin'],
             ['scripts/bigger_blast.pl',               'production_bin'],
