--- a/config/test/mappings.yml
+++ b/config/test/mappings.yml
@@ -75,6 +75,7 @@ general:
             ['scripts/wtsi_chado_privs.ksh',               'pathdev_bin'   ],
             ['scripts/load_organisms.sh',                  'pathdev_bin'   ],
             ['scripts/setup_pathpipe_environment.sh',      'pathdev_bin'   ],
+            ['scripts/concatgff.sh',      		   'pathdev_bin'   ],
             ['scripts/tmhmm_chado',                        'production_bin'],
             ['scripts/writedb_entry',                      'production_bin'],
             ['scripts/chado_dump_transcripts',             'production_bin'],
