--- a/config/production/mappings.yml
+++ b/config/production/mappings.yml
@@ -108,7 +108,8 @@ general:
             ['scripts/act',                                'production_bin'],
             ['scripts/disk_usage_report.sh',               'pathdev_bin'   ],
             ['scripts/directory_size_report.sh',           'pathdev_bin'   ],
-            ['scripts/generate_ref_index.sh',		   'pathdev_bin'   ]
+            ['scripts/generate_ref_index.sh',		   'pathdev_bin'   ],
+            ['scripts/orientationtracker.sh',              'production_bin']
         ]
   splimer: [['splimer.pl',			'production_bin'],
   	    ['modules/FastaLength.pm',		'production_lib'],
