--- a/config/production/mappings.yml
+++ b/config/production/mappings.yml
@@ -81,6 +81,7 @@ general:
             ['scripts/map2bam.pl',                    'production_bin'],
 	    ['scripts/team133-bsub.pl',               'production_bin'],
             ['modules/Pathfind.pm',                   'production_lib'],
+            ['scripts/species_frequency',             'production_bin'],
         ]
   java: [ ["googlecode.jar", "production_java"] ]
   
