--- a/config/production/mappings.yml
+++ b/config/production/mappings.yml
@@ -83,7 +83,8 @@ general:
 	    ['scripts/team133-bsub.pl',               'production_bin'],
             ['modules/Pathfind.pm',                   'production_lib'],
             ['scripts/species_frequency',             'production_bin'],
-            ['scripts/stats_and_graphs_for_bams',     'pathdev_bin'   ]
+            ['scripts/stats_and_graphs_for_bams',     'pathdev_bin'   ],
+	    ['scripts/chado_dump_proteins_ordered',   'production_bin']
         ]
   java: [ ["googlecode.jar", "production_java"] ]
   
