--- a/config/production/mappings.yml
+++ b/config/production/mappings.yml
@@ -83,8 +83,7 @@ general:
 	    ['scripts/team133-bsub.pl',               'production_bin'],
             ['modules/Pathfind.pm',                   'production_lib'],
             ['scripts/species_frequency',             'production_bin'],
-            ['scripts/stats_and_graphs_for_bams',     'pathdev_bin'   ],
-	    ['scripts/chado_dump_proteins_ordered',   'production_bin']
+            ['scripts/stats_and_graphs_for_bams',     'pathdev_bin'   ]
         ]
   java: [ ["googlecode.jar", "production_java"] ]
   
@@ -113,7 +112,8 @@ general:
             ['scripts/disk_usage_report.sh',               'pathdev_bin'   ],
             ['scripts/directory_size_report.sh',           'pathdev_bin'   ],
             ['scripts/generate_ref_index.sh',		   'pathdev_bin'   ],
-            ['scripts/orientationtracker.sh',              'production_bin']
+            ['scripts/orientationtracker.sh',              'production_bin'],
+            ['scripts/chado_dump_proteins_ordered',   	   'production_bin']
         ]
   splimer: [['splimer.pl',			'production_bin'],
   	    ['modules/FastaLength.pm',		'production_lib'],
