--- a/config/production/mappings.yml
+++ b/config/production/mappings.yml
@@ -83,6 +83,7 @@ general:
 	    ['scripts/team133-bsub.pl',               'production_bin'],
             ['modules/Pathfind.pm',                   'production_lib'],
             ['scripts/species_frequency',             'production_bin'],
+            ['scripts/tradisfind',             'production_bin'],
             ['scripts/stats_and_graphs_for_bams',     'pathdev_bin'   ]
         ]
   java: [ ["googlecode.jar", "production_java"] ]
