--- a/config/production/mappings.yml
+++ b/config/production/mappings.yml
@@ -83,8 +83,9 @@ general:
 	    ['scripts/team133-bsub.pl',               'production_bin'],
             ['modules/Pathfind.pm',                   'production_lib'],
             ['scripts/species_frequency',             'production_bin'],
-            ['scripts/tradisfind',             'production_bin'],
-            ['scripts/stats_and_graphs_for_bams',     'pathdev_bin'   ]
+            ['scripts/tradisfind',             	      'production_bin'],
+            ['scripts/stats_and_graphs_for_bams',     'pathdev_bin'   ],
+	    ['scripts/sh16_scripts_to_git.pl',        'pathdev_bin'   ]
         ]
   java: [ ["googlecode.jar", "production_java"] ]
   
