--- a/config/production/mappings.yml
+++ b/config/production/mappings.yml
@@ -115,7 +115,9 @@ general:
             ['scripts/directory_size_report.sh',           'pathdev_bin'   ],
             ['scripts/generate_ref_index.sh',		   'pathdev_bin'   ],
             ['scripts/orientationtracker.sh',              'production_bin'],
-            ['scripts/chado_dump_proteins_ordered',   	   'production_bin']
+            ['scripts/chado_dump_proteins_ordered',   	   'production_bin'],
+            ['scripts/chado_dump_transcripts_coding',      'production_bin'],
+            ['scripts/chado_dump_transcripts_rna',         'production_bin']
         ]
   splimer: [['splimer.pl',			'production_bin'],
   	    ['modules/FastaLength.pm',		'production_lib'],
