--- a/config/production/mappings.yml
+++ b/config/production/mappings.yml
@@ -81,6 +81,7 @@ general:
             ['scripts/assemble_lanes',                'production_bin'],
             ['scripts/map2bam.pl',                    'production_bin'],
 	    ['scripts/team133-bsub.pl',               'production_bin'],
+            ['scripts/tradis_analysis',               'production_bin'],
             ['modules/Pathfind.pm',                   'production_lib'],
             ['scripts/species_frequency',             'production_bin'],
             ['scripts/tradisfind',             'production_bin'],
