--- a/config/production/mappings.yml
+++ b/config/production/mappings.yml
@@ -87,7 +87,8 @@ general:
             ['scripts/tradisfind',             	      'production_bin'],
             ['scripts/stats_and_graphs_for_bams',     'pathdev_bin'   ],
 	    ['scripts/sh16_scripts_to_git.pl',        'pathdev_bin'   ],
-	    ['scripts/jit_scripts_to_git.pl',         'pathdev_bin'   ]
+	    ['scripts/jit_scripts_to_git.pl',         'pathdev_bin'   ],
+	    ['scripts/fasta_one_line.pl',             'production_bin']
         ]
   java: [ ["googlecode.jar", "production_java"] ]
   
