Added run_jscript to production

--- a/config/production/mappings.yml
+++ b/config/production/mappings.yml
@@ -124,7 +124,8 @@ general:
             ['scripts/orientationtracker.sh',              'production_bin'],
             ['scripts/chado_dump_proteins_ordered',   	   'production_bin'],
             ['scripts/chado_dump_transcripts_coding',      'production_bin'],
-            ['scripts/chado_dump_transcripts_rna',         'production_bin']
+            ['scripts/chado_dump_transcripts_rna',         'production_bin'],
+	    ['scripts/run_jscript',         'production_bin']
         ]
   splimer: [['splimer.pl',			'production_bin'],
   	    ['modules/FastaLength.pm',		'production_lib'],
