Change to jspecies from jscript

--- a/config/production/mappings.yml
+++ b/config/production/mappings.yml
@@ -125,7 +125,7 @@ general:
             ['scripts/chado_dump_proteins_ordered',   	   'production_bin'],
             ['scripts/chado_dump_transcripts_coding',      'production_bin'],
             ['scripts/chado_dump_transcripts_rna',         'production_bin'],
-	    ['scripts/run_jscript',         'production_bin']
+	    ['scripts/run_jspecies',         'production_bin']
         ]
   splimer: [['splimer.pl',			'production_bin'],
   	    ['modules/FastaLength.pm',		'production_lib'],
