--- a/config/production/mappings.yml
+++ b/config/production/mappings.yml
@@ -95,7 +95,7 @@ general:
         ]
   java: [ ["googlecode.jar", "production_java"] ]
   
-  c: [[ "bin/assembly_stats_mh12", 'pathdev_bin']]
+  c: [[ "bin/assembly_stats", 'pathdev_bin']]
   r: [[ "scripts/tradis_essentiality.R", 'production_bin']]
   
   shell: [
