--- a/config/production/mappings.yml
+++ b/config/production/mappings.yml
@@ -92,7 +92,8 @@ general:
 	    ['scripts/sh16_scripts_to_git.pl',        'pathdev_bin'   ],
 	    ['scripts/jit_scripts_to_git.pl',         'pathdev_bin'   ],
 	    ['scripts/fasta_one_line.pl',             'production_bin'],
-            ['scripts/list_species_sequenced.pl',     'pathdev_bin'   ]
+            ['scripts/list_species_sequenced.pl',     'pathdev_bin'   ],
+	    ['scripts/cshrc_to_bash.pl',              'pathdev_bin'   ]
         ]
   java: [ ["googlecode.jar", "production_java"] ]
   
