--- a/config/production/mappings.yml
+++ b/config/production/mappings.yml
@@ -18,6 +18,7 @@ general:
         ]
   
   perl: [
+            ['scripts/fastq_to_fasta',                'production_bin'],
             ['scripts/merge_rnaseq_expression_spreadsheets.pl', 'pathdev_bin'],
             ['scripts/convert_gff3_to_gff2.pl',       'production_bin'],
             ['scripts/tradis_merge_plots',            'production_bin'],
