--- a/config/production/mappings.yml
+++ b/config/production/mappings.yml
@@ -88,6 +88,7 @@ general:
             ['scripts/map2bam.pl',                    'production_bin'],
 	    ['scripts/team133-bsub.pl',               'production_bin'],
             ['modules/Pathfind.pm',                   'production_lib'],
+            ['modules/FindLanes.pm',                   'production_lib'],
             ['scripts/species_frequency',             'production_bin'],
             ['scripts/tradisfind',             	      'production_bin'],
             ['scripts/stats_and_graphs_for_bams',     'pathdev_bin'   ],
