--- a/config/production/mappings.yml
+++ b/config/production/mappings.yml
@@ -48,6 +48,7 @@ general:
             ['scripts/scaffold_perl_application.pl',  'pathdev_bin'   ],
             ['scripts/reffind',                       'production_bin'],
             ['scripts/pathfind',                      'production_bin'],
+            ['scripts/annotationfind',                'production_bin'],
             ['scripts/plexfind',                      'production_bin'],
             ['scripts/mapfind',                       'production_bin'],
             ['scripts/snpfind',                       'production_bin'],
