--- a/config/production/mappings.yml
+++ b/config/production/mappings.yml
@@ -101,6 +101,7 @@ general:
 	    ['scripts/cshrc_to_bash.pl',              'pathdev_bin'   ],
             ['scripts/infofind',                      'production_bin'],
             ['scripts/select_gene_sequences.pl',      'production_bin'],
+            ['scripts/find_untracked_studies.pl',     'pathdev_bin'   ],
         ]
   java: [ ["googlecode.jar", "production_java"] ]
   
