remove deleted update scripts, deploy whereismydata script

--- a/config/production/mappings.yml
+++ b/config/production/mappings.yml
@@ -28,15 +28,12 @@ general:
             ['scripts/populate_organisms.pl',         'pathdev_bin'   ],
             ['scripts/rt_report',                     'pathdev_bin'   ],
             ['scripts/update_lustre_ref_genomes.pl',  'pathdev_bin'   ],
-            ['scripts/update_pathtrack_irods.pl',     'pathdev_bin'   ],
-            ['scripts/update_software.pl',            'pathdev_bin'   ],
             ['scripts/check_lustre.pl',               'pathdev_bin'   ],
             ['scripts/fetch_references.pl',           'pathdev_bin'   ],
             ['scripts/list_used_references.pl',       'pathdev_bin'   ],
             ['scripts/reads_analysis.pl',             'pathdev_bin'   ],
             ['scripts/scaffolder',                    'pathdev_bin'   ],
-            ['scripts/set_orgprops.pl',               'pathdev_bin'   ],
-            ['scripts/update_pathtrack.pl',           'pathdev_bin'   ],       
+            ['scripts/set_orgprops.pl',               'pathdev_bin'   ],    
             ['scripts/check_aux_files.pl',            'pathdev_bin'   ],  
             ['scripts/num_lanes_in_pipelines',        'pathdev_bin'   ],
             ['scripts/forecast_sequencing_data.pl',   'pathdev_bin'   ],
@@ -46,6 +43,7 @@ general:
             ['scripts/update_species_table.pl',       'pathdev_bin'   ],
             ['scripts/scaffold_perl_application.pl',  'pathdev_bin'   ],
             ['scripts/reffind',                       'production_bin'],
+            ['scripts/whereismydata',                 'production_bin'],
             ['scripts/pathfind',                      'production_bin'],
             ['scripts/annotationfind',                'production_bin'],
             ['scripts/plexfind',                      'production_bin'],
