submission_lookup get_sequencing_project_pages.py

--- a/config/production/mappings.yml
+++ b/config/production/mappings.yml
@@ -13,8 +13,8 @@ general:
             ['scripts/writedb_entries.py',              'production_bin'],
             ['scripts/fastn2gc.py',                     'production_bin'],
             ['scripts/mh12_utils.py',                   'production_bin'],
-	    ['scripts/fastn.py',    	                'production_bin'],
-	    ['scripts/fastn_split.py',              	'production_bin'],
+            ['scripts/fastn.py',    	                  'production_bin'],
+            ['scripts/fastn_split.py',                	'production_bin'],
         ]
   
   perl: [
@@ -83,18 +83,19 @@ general:
             ['scripts/shuffle_reads',                 'production_bin'],
             ['scripts/assemble_lanes',                'production_bin'],
             ['scripts/map2bam.pl',                    'production_bin'],
-	    ['scripts/team133-bsub.pl',               'production_bin'],
+	          ['scripts/team133-bsub.pl',               'production_bin'],
             ['modules/Pathfind.pm',                   'production_lib'],
             ['modules/PathfindLog.pm',                'production_lib'],
-            ['modules/FindLanes.pm',                   'production_lib'],
+            ['modules/FindLanes.pm',                  'production_lib'],
+            ['modules/SubmissionLookup.pm',           'production_lib'],
             ['scripts/species_frequency',             'production_bin'],
             ['scripts/tradisfind',             	      'production_bin'],
             ['scripts/stats_and_graphs_for_bams',     'pathdev_bin'   ],
-	    ['scripts/sh16_scripts_to_git.pl',        'pathdev_bin'   ],
-	    ['scripts/jit_scripts_to_git.pl',         'pathdev_bin'   ],
-	    ['scripts/fasta_one_line.pl',             'production_bin'],
+	          ['scripts/sh16_scripts_to_git.pl',        'pathdev_bin'   ],
+	          ['scripts/jit_scripts_to_git.pl',         'pathdev_bin'   ],
+	          ['scripts/fasta_one_line.pl',             'production_bin'],
             ['scripts/list_species_sequenced.pl',     'pathdev_bin'   ],
-	    ['scripts/cshrc_to_bash.pl',              'pathdev_bin'   ],
+	          ['scripts/cshrc_to_bash.pl',              'pathdev_bin'   ],
             ['scripts/infofind',                      'production_bin'],
             ['scripts/select_gene_sequences.pl',      'production_bin'],
         ]
@@ -111,7 +112,7 @@ general:
             ['scripts/load_organisms.sh',                  'pathdev_bin'   ],
             ['scripts/setup_pathpipe_environment.sh',      'pathdev_bin'   ],
             ['scripts/setup_test_pathpipe_environment.sh', 'pathdev_bin'   ],
-            ['scripts/concatgff.sh', 			   'pathdev_bin'   ],
+            ['scripts/concatgff.sh',                       'pathdev_bin'   ],
             ['scripts/tmhmm_chado',                        'production_bin'],
             ['scripts/writedb_entry',                      'production_bin'],
             ['scripts/chado_dump_transcripts',             'production_bin'],
@@ -128,7 +129,7 @@ general:
             ['scripts/act',                                'production_bin'],
             ['scripts/disk_usage_report.sh',               'pathdev_bin'   ],
             ['scripts/directory_size_report.sh',           'pathdev_bin'   ],
-            ['scripts/generate_ref_index.sh',		   'pathdev_bin'   ],
+            ['scripts/generate_ref_index.sh',              'pathdev_bin'   ],
             ['scripts/orientationtracker.sh',              'production_bin'],
             ['scripts/chado_dump_proteins_ordered',   	   'production_bin'],
             ['scripts/chado_dump_transcripts_coding',      'production_bin'],
